--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <header class="header">
          <div class="container header__container">
             <nav class="navigation">
-               <a href="./index.html" class="logo link">
+               <a href="./index.html" class="logo logo--dark link">
                   <span>Web</span>Studio
                </a>
                <ul class="menu list">
@@ -45,7 +45,7 @@
                   </li>
                </ul>
             </nav>
-            <ul class="connect header__connect list">
+            <ul class="connect list">
                <li class="connect__item">
                   <a
                      href="mailto:info@devstudio.com"
@@ -80,54 +80,54 @@
          </section>
 
          <!-- features -->
-         <section class="section features">
+         <section class="feature section">
             <h2 class="visually-hidden">Наші переваги</h2>
             <div class="container">
-               <ul class="feature-list list">
-                  <li class="feature-item">
-                     <div class="feature-box">
-                        <svg class="feature-icon">
+               <ul class="feature__list list">
+                  <li class="feature__item item">
+                     <div class="box feature__box">
+                        <svg class="box__icon">
                            <use href="./images/icons.svg#icon-antenna"></use>
                         </svg>
                      </div>
-                     <h3 class="feature-title title">Увага до деталей</h3>
-                     <p class="text">
+                     <h3 class="feature__title title">Увага до деталей</h3>
+                     <p class="feature__text">
                         Ідейні міркування, і навіть початок повсякденної роботи
                         з формування позиції.
                      </p>
                   </li>
-                  <li class="feature-item">
-                     <div class="feature-box">
-                        <svg class="feature-icon">
+                  <li class="feature__item item">
+                     <div class="box feature__box">
+                        <svg class="box__icon">
                            <use href="./images/icons.svg#icon-clock"></use>
                         </svg>
                      </div>
-                     <h3 class="feature-title title">Пунктуальність</h3>
-                     <p class="text">
+                     <h3 class="feature__title title">Пунктуальність</h3>
+                     <p class="feature__text">
                         Завдання організації, особливо рамки і місце навчання
                         кадрів тягне у себе.
                      </p>
                   </li>
-                  <li class="feature-item">
-                     <div class="feature-box">
-                        <svg class="feature-icon">
+                  <li class="feature__item item">
+                     <div class="box feature__box">
+                        <svg class="box__icon">
                            <use href="./images/icons.svg#icon-diagram"></use>
                         </svg>
                      </div>
-                     <h3 class="feature-title title">Планування</h3>
-                     <p class="text">
+                     <h3 class="feature__title title">Планування</h3>
+                     <p class="feature__text">
                         Так само консультація з широким активом значною мірою
                         зумовлює.
                      </p>
                   </li>
-                  <li class="feature-item">
-                     <div class="feature-box">
-                        <svg class="feature-icon">
+                  <li class="feature__item item">
+                     <div class="box feature__box">
+                        <svg class="box__icon">
                            <use href="./images/icons.svg#icon-astronaut"></use>
                         </svg>
                      </div>
-                     <h3 class="feature-title title">Сучасні технології</h3>
-                     <p class="text">
+                     <h3 class="feature__title title">Сучасні технології</h3>
+                     <p class="feature__text">
                         Значимість цих проблем настільки очевидна, що реалізація
                         планових завдань.
                      </p>
@@ -139,46 +139,44 @@
          <!-- occupation -->
          <section class="section occupation">
             <div class="container">
-               <h2 class="section-title title">Чим ми займаємося</h2>
-               <ul class="occupation-list list">
-                  <li class="occupation-item">
-                     <div class="occupation-thumb">
+               <h2 class="section__title title">Чим ми займаємося</h2>
+               <ul class="occupation__list list">
+                  <li class="occupation__item item">
+                     <div class="item__thumb">
                         <img
                            src="./images/studio/occupation/ocupation-1.jpg"
                            alt="Людина набирає текст з клавіатури"
                            width="370"
                            height="294"
                         />
-                        <div class="occupation-label">
-                           <h3 class="occupation-title">Десктопні додатки</h3>
+                        <div class="label item__label">
+                           <h3 class="label__title">Десктопні додатки</h3>
                         </div>
                      </div>
                   </li>
-                  <li class="occupation-item">
-                     <div class="occupation-thumb">
+                  <li class="occupation__item item">
+                     <div class="item__thumb">
                         <img
                            src="./images/studio/occupation/ocupation-2.jpg"
                            alt="Людина працює з телефоном і ноутбуком"
                            width="370"
                            height="294"
                         />
-                        <div class="occupation-label">
-                           <h3 class="occupation-title">Мобільні додатки</h3>
+                        <div class="item__label label">
+                           <h3 class="label__title">Мобільні додатки</h3>
                         </div>
                      </div>
                   </li>
-                  <li class="occupation-item">
-                     <div class="occupation-thumb">
+                  <li class="occupation__item item">
+                     <div class="item__thumb">
                         <img
                            src="./images/studio/occupation/ocupation-3.jpg"
                            alt="Палітра кольорів, відкрита на планшеті"
                            width="370"
                            height="294"
                         />
-                        <div class="occupation-label">
-                           <h3 class="occupation-title">
-                              Дизайнерські рішення
-                           </h3>
+                        <div class="item__label label">
+                           <h3 class="label__title">Дизайнерські рішення</h3>
                         </div>
                      </div>
                   </li>
@@ -426,7 +424,7 @@
          <!-- clients -->
          <section class="section clients">
             <div class="container">
-               <h2 class="section-title title">Постійні клієнти</h2>
+               <h2 class="section__title title">Постійні клієнти</h2>
                <ul class="clients-list list">
                   <li class="clients-item">
                      <a
@@ -502,43 +500,44 @@
       </main>
 
       <footer class="footer">
-         <div class="container-wrap container">
-            <div class="footer-contacts">
-               <a href="./index.html" class="logo link"
+         <div class="footer__container container">
+            <div class="footer__contacts-wrap">
+               <a href="./index.html" class="logo logo--light link"
                   ><span>Web</span>Studio
                </a>
                <address>
-                  <ul class="footer-contacts-list list">
-                     <li>
+                  <ul class="footer__contacts-list contacts-list list">
+                     <li class="contact-list__item">
                         <a
                            href="https://goo.gl/maps/rV1uZb9G3z83WBQQ9"
                            target="_blank"
                            rel="noopener noreferrer nofollow"
-                           class="footer-address link"
+                           class="contact-list__address link"
                            >м. Київ, пр-т Лесі Українки, 26</a
                         >
                      </li>
-                     <li class="footer-contacts-item">
+                     <li class="contact-list__item">
                         <a
                            href="mailto:info@devstudio.com"
-                           class="footer-mail link"
+                           class="contact-list__mail link"
                            >info@devstudio.com</a
                         >
                      </li>
                      <li>
-                        <a href="tel:+380961111111" class="footer-tel link"
+                        <a
+                           href="tel:+380961111111"
+                           class="contact-list__tel link"
                            >+38 096 111 11 11</a
                         >
                      </li>
                   </ul>
                </address>
             </div>
-            <div class="footer-social-wrap">
-               <p class="footer-motivation">Приєднуйтесь</p>
-               <p></p>
-               <div class="footer-social">
+            <div class="footer__social-wrap social">
+               <p class="social__text motivation">Приєднуйтесь</p>
+               <div class="footer__soc">
                   <ul class="soc-list list">
-                     <li class="soc-item">
+                     <li class="soc-list__soc-item soc-item">
                         <a
                            href="#"
                            rel="noopener nofollow noreferrer"
@@ -585,15 +584,17 @@
                   </ul>
                </div>
             </div>
-            <div class="footer-subscription">
-               <p class="footer-motivation">Підпишіться на розсилку</p>
-               <form class="footer-subscription-form">
+            <div class="footer__subscription subscription">
+               <p class="subscription__text motivation">
+                  Підпишіться на розсилку
+               </p>
+               <form class="subscription__form form">
                   <input
                      type="email"
                      placeholder="E-mail"
-                     class="footer-input"
+                     class="form__input"
                   />
-                  <button type="submit" class="subscription-button btn">
+                  <button type="submit" class="form__button btn">
                      Підписатися
                      <svg width="24" height="24">
                         <use href="./images/icons.svg#icon-send"></use>
