--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
       <header class="header">
          <div class="container header__container">
             <nav class="navigation">
-               <a href="./index.html" class="logo link">
+               <a href="./index.html" class="logo logo--dark link">
                   <span>Web</span>Studio
                </a>
                <ul class="menu list">
@@ -99,13 +99,13 @@
                <ul class="example-list list">
                   <li class="example-item">
                      <a href="#" class="example-link link">
-                        <div class="example-overlay-thumb">
+                        <div class="overlay-thumb">
                            <img
                               src="./images/portfolio/portfolio-1.jpg"
                               alt="Ноутбук з відкритим веб-сайтом."
                               width="370"
                            />
-                           <div class="example-hover-overlay">
+                           <div class="hover-overlay">
                               <p class="overlay-text">
                                  Ресурс пропонує комплексні пропозиції з різним
                                  рівнем функціоналу та сервісів. Все це
@@ -122,13 +122,13 @@
                   </li>
                   <li class="example-item">
                      <a href="#" class="example-link link">
-                        <div class="example-overlay-thumb">
+                        <div class="overlay-thumb">
                            <img
                               src="./images/portfolio/portfolio-2.jpg"
                               alt="Два спортсмена грають в баскетбол."
                               width="370"
                            />
-                           <div class="example-hover-overlay">
+                           <div class="hover-overlay">
                               <p class="overlay-text">
                                  Ресурс пропонує комплексні пропозиції з різним
                                  рівнем функціоналу та сервісів. Все це
@@ -148,13 +148,13 @@
                   </li>
                   <li class="example-item">
                      <a href="" class="example-link link">
-                        <div class="example-overlay-thumb">
+                        <div class="overlay-thumb">
                            <img
                               src="./images/portfolio/portfolio-3.jpg"
                               alt="Логотип ресторану."
                               width="370"
                            />
-                           <div class="example-hover-overlay">
+                           <div class="hover-overlay">
                               <p class="overlay-text">
                                  Ресурс пропонує комплексні пропозиції з різним
                                  рівнем функціоналу та сервісів. Все це
@@ -173,13 +173,13 @@
                   </li>
                   <li class="example-item">
                      <a href="#" class="example-link link">
-                        <div class="example-overlay-thumb">
+                        <div class="overlay-thumb">
                            <img
                               src="./images/portfolio/portfolio-4.jpg"
                               alt="Бездротові чорні навушники"
                               width="370"
                            />
-                           <div class="example-hover-overlay">
+                           <div class="hover-overlay">
                               <p class="overlay-text">
                                  Ресурс пропонує комплексні пропозиції з різним
                                  рівнем функціоналу та сервісів. Все це
@@ -198,13 +198,13 @@
                   </li>
                   <li class="example-item">
                      <a href="" class="example-link link">
-                        <div class="example-overlay-thumb">
+                        <div class="overlay-thumb">
                            <img
                               src="./images/portfolio/portfolio-5.jpg"
                               alt="Біла та кремова коробки"
                               width="370"
                            />
-                           <div class="example-hover-overlay">
+                           <div class="hover-overlay">
                               <p class="overlay-text">
                                  Ресурс пропонує комплексні пропозиції з різним
                                  рівнем функціоналу та сервісів. Все це
@@ -223,13 +223,13 @@
                   </li>
                   <li class="example-item">
                      <a href="#" class="example-link link">
-                        <div class="example-overlay-thumb">
+                        <div class="overlay-thumb">
                            <img
                               src="./images/portfolio/portfolio-6.jpg"
                               alt="Комп'ютер iMac з відкритим веб-сайтом."
                               width="370"
                            />
-                           <div class="example-hover-overlay">
+                           <div class="hover-overlay">
                               <p class="overlay-text">
                                  Ресурс пропонує комплексні пропозиції з різним
                                  рівнем функціоналу та сервісів. Все це
@@ -248,13 +248,13 @@
                   </li>
                   <li class="example-item">
                      <a href="#" class="example-link link">
-                        <div class="example-overlay-thumb">
+                        <div class="overlay-thumb">
                            <img
                               src="./images/portfolio/portfolio-7.jpg"
                               alt="Розворіт глянсового журналу."
                               width="370"
                            />
-                           <div class="example-hover-overlay">
+                           <div class="hover-overlay">
                               <p class="overlay-text">
                                  Ресурс пропонує комплексні пропозиції з різним
                                  рівнем функціоналу та сервісів. Все це
@@ -273,13 +273,13 @@
                   </li>
                   <li class="example-item">
                      <a href="#" class="example-link link">
-                        <div class="example-overlay-thumb">
+                        <div class="overlay-thumb">
                            <img
                               src="./images/portfolio/portfolio-8.jpg"
                               alt="Бейдж з логотипом компанії."
                               width="370"
                            />
-                           <div class="example-hover-overlay">
+                           <div class="hover-overlay">
                               <p class="overlay-text">
                                  Ресурс пропонує комплексні пропозиції з різним
                                  рівнем функціоналу та сервісів. Все це
@@ -298,13 +298,13 @@
                   </li>
                   <li class="example-item">
                      <a href="#" class="example-link link">
-                        <div class="example-overlay-thumb">
+                        <div class="overlay-thumb">
                            <img
                               src="./images/portfolio/portfolio-9.jpg"
                               alt="Людина працює за ноутбуком."
                               width="370"
                            />
-                           <div class="example-hover-overlay">
+                           <div class="hover-overlay">
                               <p class="overlay-text">
                                  Ресурс пропонує комплексні пропозиції з різним
                                  рівнем функціоналу та сервісів. Все це
@@ -327,80 +327,82 @@
       </main>
 
       <footer class="footer">
-         <div class="container-wrap container">
-            <div class="footer-contacts">
-               <a href="./index.html" class="logo link"
+         <div class="footer__container container">
+            <div class="footer__contacts-wrap">
+               <a href="./index.html" class="logo logo--light link"
                   ><span>Web</span>Studio
                </a>
                <address>
-                  <ul class="footer-contacts-list list">
-                     <li>
+                  <ul class="footer__contacts-list contacts-list list">
+                     <li class="contact-list__item">
                         <a
                            href="https://goo.gl/maps/rV1uZb9G3z83WBQQ9"
                            target="_blank"
                            rel="noopener noreferrer nofollow"
-                           class="footer-address link"
+                           class="contact-list__address link"
                            >м. Київ, пр-т Лесі Українки, 26</a
                         >
                      </li>
-                     <li class="footer-contacts-item">
+                     <li class="contact-list__item">
                         <a
                            href="mailto:info@devstudio.com"
-                           class="footer-mail link"
+                           class="contact-list__mail link"
                            >info@devstudio.com</a
                         >
                      </li>
                      <li>
-                        <a href="tel:+380961111111" class="footer-tel link"
+                        <a
+                           href="tel:+380961111111"
+                           class="contact-list__tel link"
                            >+38 096 111 11 11</a
                         >
                      </li>
                   </ul>
                </address>
             </div>
-            <div class="footer-social-wrap">
-               <h3>Приєднуйтесь</h3>
-               <div class="footer-social">
-                  <ul class="footer-social-list list">
-                     <li class="footer-social-item">
+            <div class="footer__social-wrap social">
+               <p class="social__text motivation">Приєднуйтесь</p>
+               <div class="footer__soc">
+                  <ul class="soc-list list">
+                     <li class="soc-list__soc-item soc-item">
                         <a
                            href="#"
                            rel="noopener nofollow noreferrer"
-                           class="footer-social-link link"
-                           ><svg class="footer-social-icon">
+                           class="footer__soc-link soc-link link"
+                           ><svg class="soc-icon">
                               <use
                                  href="./images/icons.svg#icon-instagram"
                               ></use></svg
                         ></a>
                      </li>
-                     <li class="footer-social-item">
+                     <li class="soc-item">
                         <a
                            href="#"
                            rel="noopener nofollow noreferrer"
-                           class="footer-social-link link"
-                           ><svg class="footer-social-icon">
+                           class="footer__soc-link soc-link link"
+                           ><svg class="soc-icon">
                               <use
                                  href="./images/icons.svg#icon-twitter"
                               ></use></svg
                         ></a>
                      </li>
-                     <li class="footer-social-item">
+                     <li class="soc-item">
                         <a
                            href="#"
                            rel="noopener nofollow noreferrer"
-                           class="footer-social-link link"
-                           ><svg class="footer-social-icon">
+                           class="footer__soc-link soc-link link"
+                           ><svg class="soc-icon">
                               <use
                                  href="./images/icons.svg#icon-facebook"
                               ></use></svg
                         ></a>
                      </li>
-                     <li class="footer-social-item">
+                     <li class="soc-item">
                         <a
                            href="#"
                            rel="noopener nofollow noreferrer"
-                           class="footer-social-link link"
-                           ><svg class="footer-social-icon">
+                           class="footer__soc-link soc-link link"
+                           ><svg class="soc-icon">
                               <use
                                  href="./images/icons.svg#icon-linkedin"
                               ></use></svg
@@ -409,15 +411,17 @@
                   </ul>
                </div>
             </div>
-            <div class="footer-subscription">
-               <p class="footer-motivation">Підпишіться на розсилку</p>
-               <form class="footer-subscription-form">
+            <div class="footer__subscription subscription">
+               <p class="subscription__text motivation">
+                  Підпишіться на розсилку
+               </p>
+               <form class="subscription__form form">
                   <input
                      type="email"
                      placeholder="E-mail"
-                     class="footer-input"
+                     class="form__input"
                   />
-                  <button type="submit" class="subscription-button btn">
+                  <button type="submit" class="form__button btn">
                      Підписатися
                      <svg width="24" height="24">
                         <use href="./images/icons.svg#icon-send"></use>
